welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: type mismatch;
 found   : Unit
 required: Int
compteurA = Math.abs(a - 10)
          ^